...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EMF_field"
        app:layout_constraintVertical_bias="0.275"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/recordButton"
        android:drawableTop="@drawable/perm_group_system_tools"
        android:onClick="onSettings" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="154dp"
...
