...
        android:layout_alignTop="@+id/units_text"
        android:layout_marginTop="79dp"
        android:text="Alert\nThreshold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/threshold_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/units_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="78dp"
        android:layout_toEndOf="@id/threshold_text"
...
    <Button
        android:text="Apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/apply_id"
        android:onClick="apply" />

</RelativeLayout>
